--- a/index.html
+++ b/index.html
@@ -91,8 +91,10 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>The Hurds</h2>
-          <p>Carol and Kevin Hurd make quite a team. Anyone that knows either one is sure not to forget, especially when meeting them together. While Kevin provides the comic relief, Carol always makes sure to cover for any jokes gone too far. Both however are sure to make you feel cared about and supported (even if Kevin makes fun of ya) Their friends and family know them both as fun, supportive, and warm spirited, which makes them the parents anyone would want to be around!</p>
+          <h2>About</h2>
+          <p>Carol and Kevin make quite a team. Anyone that knows either one is sure not to forget, especially when meeting them together. While Kevin provides the comic relief, 
+            Carol always makes sure to cover for any jokes gone too far. Both however are sure to make you feel cared about and supported (even if Kevin makes fun of ya) 
+            </p>
         </div>
 
         <div class="row content">
@@ -101,7 +103,10 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Any lunch or dinner at Kevin and Carol's place is one filled warm hospitality, deliciously cooked food, and of course the other members of the Hurd as well! That's because its a tradition for every Christmas to spend the afternoon with all the family at their place - hanging out and catching up!
+              If you were to ask their their nephew & niece-in-law, they'd say Kevin and Carol are both fun, welcoming, and warm spirited, although they wish Kevin would play Kan Jam more!
+            </p>
+            <p>
+              Any event at Kevin and Carol's place is one filled with lots of laughs and good conversations. They're so fun, I'm sure their nephew wouldn't mind the next Hurd event being at their place ;) 
             </p><!-- 
             <ul>
               <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
@@ -110,6 +115,12 @@
             </ul>-->
             <p>
               Both Kevin and Carol stay actively involved in their kids hobbies and school. Its not rare to find their weekends spent bringing Camden to softball or Kinsey to volleyball. They always make an effort to spend time with their kids, even when times get hectic!
+            </p>
+            <p>
+              Like their mom and dad, Kinsey and Camden are always fun to be around. They're pretty dang good at four square, making Tik Toks, riding hover boards, and all sorts of other stuff! It's safe to say they stay pretty busy - guess the apple doesn't fall too far from the tree!
+            </p>
+            <p>
+              Also, did we mention they're gator fans? Go Gata!
             </p>
             <a href="our-story.html" class="btn-learn-more">Learn More</a>
           </div>
