--- a/our-story.html
+++ b/our-story.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -35,7 +35,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">Nana &amp; Papa Hurd</a></h1>
+      <h1 class="logo"><a href="index.html">Kevin &amp; Carol</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -57,10 +57,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Our Story</h2>
+          <h2>Adventures</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Our Story</li>
+            <li>Adventures</li>
           </ol>
         </div>
 
@@ -70,26 +70,17 @@
     <!-- ======= Story Intro Section ======= -->
     <section id="story-intro" class="story-intro">
       <div class="container">
-
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2">
-            <img src="assets/img/intro.jpg" class="img-fluid" alt="">
+            <img src="assets/img/adventure.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>Fun Activities</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              The Hurds aren't strangers to adventure! 
             </p>
-            <ul>
-              <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bi bi-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-            </ul>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              Back in 2019 they took the family to the Miami speedboat adventures where this photo was took. 
             </p>
           </div>
         </div>
@@ -103,39 +94,35 @@
 
         <div class="row content">
           <div class="col-lg-6">
-            <img src="assets/img/members/featured-members-1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/trip.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-3 pt-lg-0">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>Fun Vacations</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Can't be a true Floridian without visiting the most southern point in the US
             </p>
             <ul>
-              <li><i class="bi bi-check"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bi bi-check"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+              <li><i class="bi bi-check"></i>Quality adventure</li>
+              <li><i class="bi bi-check"></i>Quality family time</li>
             </ul>
           </div>
         </div>
 
         <div class="row content">
           <div class="col-lg-6 order-1 order-lg-2">
-            <img src="assets/img/members/featured-members-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/country.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 order-2 order-lg-1 pt-3 pt-lg-0">
-            <h3>Corporis temporibus maiores provident</h3>
+            <h3>Fun Concerts</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              The Hurds love their share of country music! 
             </p>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              Who's not a fan of Jason Aldean!?
             </p>
           </div>
         </div>
-
+        <!-- 
         <div class="row content">
           <div class="col-lg-6">
             <img src="assets/img/members/featured-members-3.jpg" class="img-fluid" alt="">
@@ -167,36 +154,17 @@
               culpa qui officia deserunt mollit anim id est laborum
             </p>
           </div>
-        </div>
+        </div>-->
 
       </div>
     </section><!-- End Featured Members Section -->
 
     <!-- ======= Members Section ======= -->
+    <!-- 
     <section id="members" class="members">
       <div class="container">
 
         <div class="row">
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <div class="member-img">
-                <img src="assets/img/members/member-1.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
-                <p>Sint qui cupiditate. Asperiores fugit impedit aspernatur et mollitia. Molestiae qui placeat labore assumenda id qui nesciunt quo reprehenderit. Rem dolores similique quis soluta culpa enim quia ratione ea.</p>
-              </div>
-            </div>
-          </div>
-
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
@@ -238,18 +206,15 @@
         </div>
 
       </div>
-    </section><!-- End Members Section -->
+    </section>-->
+    <!-- End Members Section -->
 
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Follow the Hurd</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
       <div class="social-links">
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
