--- a/our-story.html
+++ b/our-story.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Nana and Papa Hurd</title>
+  <title>Kevin and Carol</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
