--- a/events.html
+++ b/events.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Kevin & Carol Hurd</title>
+  <title>Kevin & Carol</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -34,7 +34,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">Me &amp; Family</a></h1>
+      <h1 class="logo"><a href="index.html">Kevin &amp; Carol</a></h1>
 
       <nav id="navbar" class="navbar">
         <ul>
