--- a/index.html
+++ b/index.html
@@ -190,8 +190,7 @@
 
           </div>
           <div class="swiper-pagination"></div>
-        </div>
-
+        </div>  
       </div>
     </section><!-- End Recent Photos Section -->
 
@@ -203,8 +202,8 @@
       <h3>Follow the Hurds!</h3>
       <p>You can follow Kevin and Carol on social media too!</p>
       <div class="social-links">
-        <a href="https://www.facebook.com/carol.m.hurd/about_details" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://www.facebook.com/trhurd" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.facebook.com/hurd.kevin" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.facebook.com/carol.m.hurd" class="facebook"><i class="bx bxl-facebook"></i></a>
       </div>
     </div>
   </footer>
